[workspace]
resolver = "2"
members = [
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[patch.crates-io]
libc = { git = "https://github.com/wasix-org/libc.git" }
# ring = { git = "https://github.com/wasix-org/ring.git", branch = "v0.16.20" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "epoll" }
#mio = { path = "../../mio" }
