[workspace]
resolver = "2"
members = [
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[patch.crates-io]
libc = { git = "https://github.com/wasix-org/libc.git", branch = "main" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "v0.8.6" }
